Fixed vertical spacing for What page and When page

--- a/css/stylesDesktop.css
+++ b/css/stylesDesktop.css
@@ -165,6 +165,13 @@ html {
   align-items: center;
 }
 
+.column-centered {
+  flex:1;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .what-block {
   display: flex;
@@ -173,8 +180,7 @@ html {
   align-items: center;
   flex: 1;
   /* background-color: blue; */
-  padding: 5rem 15%;
-
+  padding: 0 15%;
   border-style: solid;
   border: 0px solid white;
   border-bottom-width: 10px;
@@ -207,8 +213,6 @@ html {
   align-items: center;
   margin-bottom: 100px;
   margin-top: -75px;
-
-
 }
 
 
@@ -219,10 +223,6 @@ html {
   opacity: 100%;
   text-align: center;
   align-items: center;
-  margin-bottom: 10%;
-
-
-
 }
 
 .body-heading-how {
@@ -245,8 +245,7 @@ html {
   opacity: 100%;
   text-align: center;
   align-items: center;
-  margin-bottom: 150px;
-  margin-top: -150px;
+  
 }
 
 
@@ -466,10 +465,8 @@ html {
 
 .white-line-what {
   background-color: white;
-  margin-top: 10%;
   width: 300px;
   height: 0.5px;
-
 }
 
 .how-block {
@@ -551,20 +548,17 @@ small {
   cursor: pointer;
   background-color: #0000;
   display: flex;
+  width: fit-content;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  bottom: 100px;
-  left: 50%;
-  transform: translateX(-50%);
   padding: 0 25px;
   transition: background-color 0.25s;
 }
 
 .notify-me:hover {
   background-color: #ffffff17;
-  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.06);
+  /* box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.06); */
 
 }
 
